tests/testcases/errors/BCE0067-3.boo
"""
BCE0067-3.boo(5,5): BCE0067: There is already a local variable with the name 'a'.
"""
def foo(a):
	a as int = 3
